--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Products</title>
   </head>
   <body>
+    <input type="text" id="searchInput" placeholder="Search by keyword...">
     <div id="productContainer"></div>
   </body>
   <script type="text/javascript" src="main.js"></script>
