--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   </head>
   <body>
     <input type="text" id="searchInput" placeholder="Search by keyword...">
+    <select id="categoryFilter">
+      <option value="all">All Categories</option>
+      <!-- Add options for each category -->
+      <option value="smartphones">Smartphones</option>
+      <option value="laptops">Laptops</option>
+      <option value="fragrances">Fragrances</option>
+      <option value="skincare">Skincare</option>
+      <option value="groceries">Groceries</option>
+      <option value="home-decoration">Home-decoration</option>
+      <!-- Add more categories as needed -->
+  </select>
     <div id="productContainer"></div>
   </body>
   <script type="text/javascript" src="main.js"></script>
