--- a/index.html
+++ b/index.html
@@ -7,19 +7,12 @@
     <title>Products</title>
   </head>
   <body>
-    <input type="text" id="searchInput" placeholder="Search by keyword...">
+    <input type="text" id="searchInput" placeholder="Search by keyword..." />
     <select id="categoryFilter">
-      <option value="all">All Categories</option>
-      <!-- Add options for each category -->
-      <option value="smartphones">Smartphones</option>
-      <option value="laptops">Laptops</option>
-      <option value="fragrances">Fragrances</option>
-      <option value="skincare">Skincare</option>
-      <option value="groceries">Groceries</option>
-      <option value="home-decoration">Home-decoration</option>
       <!-- Add more categories as needed -->
-  </select>
+    </select>
     <div id="productContainer"></div>
+    <div id="pagination" class="pagination"></div>
   </body>
   <script type="text/javascript" src="main.js"></script>
 </html>
